k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-homer-deployment
  namespace: traefik-homer
spec:
  selector:
    matchLabels:
      app: traefik-homer
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik-homer
    spec:
      serviceAccountName: traefik-homer-service-account
      containers:
      - name: traefik-homer
        image: registry.kube.optimize/traefikhomer:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /files
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: config-volume
        configMap:
          name: config-map
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-homer-service
  namespace: traefik-homer
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: traefik-homer
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homer-ingress
  namespace: traefik-homer
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`services.kube.optimize`)
      kind: Rule
      services:
        - name: traefik-homer-service
          namespace: traefik-homer
          port: 8080
